--- a/kataforfun-ui/src/app/kata-for-fun/kata-for-fun.component.html
+++ b/kataforfun-ui/src/app/kata-for-fun/kata-for-fun.component.html
@@ -1,6 +1,11 @@
 <div>
-<div class="container">
-    <h2>Already converted values : </h2>
-</div>
-<app-kata-for-fun-form (submitNumberOutput)="convertNumber($event)"></app-kata-for-fun-form>
+    <div class="container">
+        <h2>Already converted values : </h2>
+        <ul class="list-group">
+            <li class="list-group-item well" *ngFor="let item of convertedNumbers">
+                {{item.numberToConvert}} and the result is {{item.result}}
+            </li>
+        </ul>
+    </div>
+    <app-kata-for-fun-form (submitNumberOutput)="convertNumber($event)"></app-kata-for-fun-form>
 </div>
